tests/ui/typeck/consider-borrowing-141810-3.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/consider-borrowing-141810-3.rs:4:12
   |
LL |       let x = if true {
   |               ------- `if` and `else` have incompatible types
LL |           &()
   |           --- expected because of this
LL |       } else if false {
   |  ____________^
LL | |
LL | |     };
   | |_____^ expected `&()`, found `()`
   |
   = note: `if` expressions without `else` evaluate to `()`
   = note: consider adding an `else` block that evaluates to the expected type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
