tests/ui/typeck/consider-borrowing-141810-3.rs
fn main() {
    let x = if true {
        &()
    } else if false { //~ ERROR `if` and `else` have incompatible types [E0308]

    };
}
